WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272362
Fix an issue with the background page trying to message full page extension content
https://bugs.webkit.org/show_bug.cgi?id=272362
Summary
Fix an issue with the background page trying to message full page extension c...
Brian Weinstein
Reported
2024-04-08 17:43:16 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-08 17:43:24 PDT
<
rdar://problem/126105380
>
Brian Weinstein
Comment 2
2024-04-08 17:46:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27002
EWS
Comment 3
2024-04-09 06:06:54 PDT
Committed
277240@main
(3b08a55102c5): <
https://commits.webkit.org/277240@main
> Reviewed commits have been landed. Closing PR #27002 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug