Fix an issue with the background page trying to message full page extension content https://bugs.webkit.org/show_bug.cgi?id=272362 rdar://125996453

Reviewed by Timothy Hatcher.

When an extension was trying to send a message from a background page to a tab with full page extension content, we were treating
the message as going to a content script and sending it to a non-main world, which led to a crash.

Additionally, we want to block an extension from sending a message to a tab showing full page content for a different extension. One
extension should have no idea about another's content.

* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPITabsCocoa.mm:
(WebKit::WebExtensionContext::tabsSendMessage):
(WebKit::WebExtensionContext::tabsConnect):
* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionTabCocoa.mm:
(WebKit::WebExtensionTab::extensionHasPermission const):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPITabs.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPITabs, SendMessageFromBackgroundPageToFullPageExtensionContent)):

Canonical link: https://commits.webkit.org/277240@main